// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile render @isProfileLoading is false && @profile is false 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Wrong user | Profile
    </title>
    <meta
      content="Profile description"
      name="description"
    />
  </HelmetWrapper>
  <div>
    <NoSuchUser />
    <withReducer(withSaga(Connect(QuestionsOfUser)))
      className="d-none"
      infinityOff={true}
    />
    <withReducer(withSaga(Connect(QuestionsWithAnswersOfUser)))
      className="d-none"
      infinityOff={true}
    />
  </div>
</div>
`;

exports[`Profile render @isProfileLoading is false && @profile is true 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Wrong user | Profile
    </title>
    <meta
      content="Profile description"
      name="description"
    />
  </HelmetWrapper>
  <div>
    <withReducer(withSaga(Connect(QuestionsOfUser)))
      className="d-none"
      infinityOff={true}
    />
    <withReducer(withSaga(Connect(QuestionsWithAnswersOfUser)))
      className="d-none"
      infinityOff={true}
    />
  </div>
</div>
`;

exports[`Profile render @isProfileLoading is true 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Wrong user | Profile
    </title>
    <meta
      content="Profile description"
      name="description"
    />
  </HelmetWrapper>
  <div>
    <LoadingIndicator />
    <withReducer(withSaga(Connect(QuestionsOfUser)))
      className="d-none"
      infinityOff={true}
    />
    <withReducer(withSaga(Connect(QuestionsWithAnswersOfUser)))
      className="d-none"
      infinityOff={true}
    />
  </div>
</div>
`;
